<resources>
    <string name="app_name">Mr.9</string>
    <string name="you_know_nothing">You know nothing</string>
    <string name="search">Find my alcohol</string>
    <string name="discover">Discover</string>
    <string name="search_title">Search</string>
    <string name="drink_now">Just drink now!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <string name="com.crashlytics.useFirebaseAppId">true</string>
    <string name="search_hint">Ex : mojito</string>
    <string name="btn_bar">Bar</string>
    <string name="btn_drink">Drink</string>
    <string name="no_rating_text">You did not make any comment yet,\nrate your drink right now</string>
    <string name="others_no_rating_text">  did not make any comment yet</string>
    <string name="no_drink_text">You did not add any drink yet</string>
    <string name="others_no_drink_text"> did not add any drink yet</string>
    <string name="no_bar_text">You did not add any bar yet</string>
    <string name="others_no_bar_text">did not add any bar yet</string>
    <string name="price_hint">Price $$</string>
</resources>
