<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginDialog">

    <data>

        <variable
            name="viewModel"
            type="com.tina.mr9.login.LoginDialogViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





    <ImageView android:layout_above="@+id/signin_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <LinearLayout android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText android:inputType="textPassword"
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button android:id="@+id/email_login_button"
            android:text="@string/signin_email"
            android:theme="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="35dp"/>
        <Button android:id="@+id/facebook_login_button"
            android:text="@string/signin_facebook"
            android:textColor="@color/white"
            android:background="@drawable/btn_signin_facebook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"/>
        <Button android:id="@+id/google_sign_in_button"
            android:text="@string/signin_google"
            android:textColor="@color/white"
            android:background="@drawable/btn_signin_google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="80dp"/>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>